<resources>
    <string name="app_name">Fitness-Tracking</string>


    <string name="action_settings">Settings</string>

    <string name="Password">Password:</string>
    <string name="Sign_in">Sign in</string>
    <string name="Register">Register</string>
    <string name="Save_Password">Save Password</string>
    <string name="Welcome">Welcome!</string>

    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="eMail">E-mail:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight(kg):</string>
    <string name="height">Height(cm):</string>
    <string name="confirmTerms">Confirm Terms</string>
    <string name="Gymnast">Gymnast</string>
    <string name="GymInstructor">Gym instructor</string>
    <string name="registerTitle">Register</string>
    <string name="title_activity_mail_confirm">MailConfirm</string>
    <string name="title_activity_exercises">ExercisesActivity</string>

    <string name="title_all_exercises">All Exercises</string>
    <string name="title_my_exercises">My Exercises</string>


    <string name="title_activity_chest_one">ChestOneActivity</string>
    <string name="title_activity_show_exercises">ShowExercisesActivity</string>


    <string name="title_activity_register">Register</string>
    <string name="title_activity_next_register">NextRegister</string>
    <string name="title_activity_profile">Profile</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_profile">EditProfile</string>



</resources>