<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#bfd0ff">

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Register"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="120dp"
        android:id="@+id/textView"
        android:layout_weight="0.07" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/firstName"
        android:id="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="170" />


    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/lastName"
        android:layout_marginTop="40dp"
        android:id="@+id/textView3"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText2"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:inputType="textPersonName"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="170" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/eMail"
        android:layout_marginTop="80dp"
        android:id="@+id/textView4"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText3"
        android:inputType="textEmailAddress"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="170" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/age"
        android:layout_marginTop="280dp"
        android:id="@+id/textView5"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText4"
        android:inputType="number"
        android:layout_marginTop="280dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="3" />


    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/weight"
        android:layout_marginTop="240dp"
        android:id="@+id/textView6"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText5"
        android:inputType="number"
        android:layout_marginTop="240dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="170" />


    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/height"
        android:layout_marginTop="200dp"
        android:id="@+id/textView7"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText6"
        android:inputType="number"
        android:layout_marginTop="200dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="3" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/Password"
        android:layout_marginTop="120dp"
        android:id="@+id/textView8"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText7"
        android:inputType="textPassword"
        android:layout_marginTop="120dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="170" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:text="@string/Password"
        android:layout_marginTop="160dp"
        android:id="@+id/textView9"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/editText8"
        android:inputType="textPassword"
        android:layout_marginTop="160dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:background="#ffffff"
        android:maxLines="1"
        android:maxLength="170" />




    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/button"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmTerms"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="140dp"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="5dp"

        android:layout_alignRight="@+id/editText4"
        android:layout_alignEnd="@+id/editText4">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gymnast"
            android:id="@+id/radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GymInstructor"
            android:id="@+id/radioButton2" />
    </RadioGroup>


</RelativeLayout>




